# mrp

./: AGENTS.md  behavior_handbook.json  pyproject.toml
src/mrp/: __init__.py  eval.py  example.py
src/mrp/pipeline/: __init__.py
src/mrp/store/: __init__.py
